fix: restore compatibility with Java 8
The module targets Java 8 bytecode and declares osgi.ee JavaSE 1.8, but it
called List.of, Set.of and Map.of, which arrived in Java 9. Two of those
calls sat in @Activate methods, so on a Java 8 runtime the components failed
to activate, the servlet filters were never registered, and the site was
left with no CSRF protection while the bundle still reported ACTIVE.

Replace the four main-source calls with Java 8 equivalents, and the three
Map.of calls in the tests.

Drop the jahia.plugin.version override so the build resolves the plugin from
the parent chain. The pinned 6.12 mojos are Java 11 bytecode, which Maven on
a Java 8 JDK cannot load at all. The inherited 6.8 is Java 8 bytecode, so the
build runs on Java 8.

Build the module on the Java 8 image in CI, so a Java 9+ API can no longer
enter this branch unnoticed: with -source/-target 1.8 alone, javac on a
Java 11 JDK still links against the Java 11 class library and accepts it.